[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/Monster.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/PlayerScene.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Main.gd" type="Script" id=3]
[ext_resource path="res://scenes/BackgroundScene.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/BlackHole.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/DrawnAssets/Titles/GameOver.png" type="Texture" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1024, 608, 0, 0, 0, 0, 1024, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 3 )
Mob = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 613.518, 283.162 )

[node name="MobTimer" type="Timer" parent="."]
wait_time = 1.25

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( 1024, 608 )
rotation = -1.57081

[node name="ParallaxBackground" parent="." instance=ExtResource( 4 )]

[node name="BlackHole" parent="." instance=ExtResource( 5 )]

[node name="Score" type="Label" parent="."]
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.0
margin_top = 148.0
margin_right = 20.0
margin_bottom = 172.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverSprite" type="Sprite" parent="."]
position = Vector2( 496, 192 )
scale = Vector2( 0.3, 0.3 )
z_index = 20
texture = ExtResource( 6 )

[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="game_over" from="BlackHole" to="." method="_on_RigidBody2D_game_over"]
